// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task should render the Task with completed status 1`] = `
<React.Fragment>
  <input
    defaultChecked={true}
    onClick={[Function]}
    type="checkbox"
  />
  Completed Task
   [
  complete
  ] 
  <button
    onClick={[Function]}
  >
    remove
  </button>
</React.Fragment>
`;

exports[`Task should render the Task with incomplete status 1`] = `
<React.Fragment>
  <input
    defaultChecked={false}
    onClick={[Function]}
    type="checkbox"
  />
  Incomplete Task
   [
  incomplete
  ] 
  <button
    onClick={[Function]}
  >
    remove
  </button>
</React.Fragment>
`;
